<resources>


    <!-- Strings related to application  start -->
    <string name="app_name">智能监测</string>
    <string name="action_settings">设置</string>

    <string name="exit_message">再点击一次退出程序</string>

    <!-- Strings related to application  end -->

    <!-- Strings related to login  start -->
    <string name="action_update">检查升级</string>
    <string name="action_url_setting">服务器地址设置</string>
    <string name="title_activity_login">登录</string>

    <string name="login_prompt_account">账号</string>
    <string name="login_prompt_password">密码</string>
    <string name="login_action_sign_in_short">登录</string>
    <string name="login_prompt_email">Email</string>
    <string name="login_error_invalid_email">This email address is invalid</string>
    <string name="login_error_invalid_password">This password is too short</string>
    <string name="login_error_incorrect_password">This password is incorrect</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_permission_rationale">"Contacts permissions are needed for providing email"</string>
    <string name="item_device_picture">图片</string>
    <string name="item_device_details">详情</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="item_picture_image_desc">设备拍摄图片</string>
    <string name="title_activity_picture_detail">PictureDetailActivity</string>
    <string name="action_search">搜索</string>
    <string name="action_search_hint">搜索…</string>
    <string name="title_activity_device_list">DeviceListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filter">筛选</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings related to login end-->


    <string name="main_nav_title_device">设备</string>
    <string name="main_nav_title_picture">图片</string>
    <string name="main_nav_title_alarm">报警</string>

    <string name="device_detail_nav_title_state">状态</string>
    <string name="device_detail_nav_title_operate">操作</string>
    <string name="device_detail_nav_title_device">设备</string>
    <string name="device_detail_nav_title_picture">图片</string>
    <string name="device_detail_nav_title_alarm">报警</string>

    <string name="device_fragment_title">设备列表</string>
    <string name="item_no_data_message">-----无数据-----</string>
    <string name="item_footer_error_message">出现错误,请重试</string>
    <string name="item_retry_btn">重试</string>

    <string name="bottom_sheet_device_title">设备筛选</string>
    <string name="bottom_sheet_device_company_label">公司</string>
    <string name="bottom_sheet_device_circuit_label">线路</string>
    <string name="bottom_sheet_device_search">搜索</string>
    <string name="bottom_sheet_device_reset">重置</string>
    <string name="bottom_sheet_device_pole_label">杆塔</string>
    <string name="title_activity_device_detail">DeviceDetailActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="time_filter_start_time">开始时间</string>
    <string name="time_filter_end_time">结束时间</string>
    <string name="time_filter_submit">确定</string>
    <string name="filter_bottom_sheet_start_time_label">开始时间</string>
    <string name="filter_bottom_sheet_end_time_label">结束时间</string>
    <string name="filter_bottom_sheet_search">搜索</string>
    <string name="filter_bottom_sheet_title">条件过滤</string>
    <string name="filter_bottom_sheet_company_label">公司</string>
    <string name="filter_bottom_sheet_circuit_label">线路</string>
    <string name="filter_bottom_sheet_pole_label">杆塔</string>
    <string name="filter_bottom_sheet_device_label">设备</string>

</resources>
