<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hy.ioms.view.device.DeviceFilterFragment">

    <data>

        <variable
            name="event"
            type="vm.EventViewModel"/>

        <variable
            name="vm"
            type="vm.DeviceFilterViewModel"/>

        <import type="android.view.View"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginStart="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
            android:text="@string/bottom_sheet_device_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="设备筛选"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{vm.loading ? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <TextView
            android:id="@+id/label_company"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginStart="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
            android:text="@string/bottom_sheet_device_company_label"
            android:visibility="@{vm.loading ? View.INVISIBLE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="公司:"
            />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/company_spinner"
            android:layout_width="0dp"
            android:layout_height="@dimen/fragment_camera_item_height"
            android:layout_marginEnd="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginStart="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:visibility="@{vm.loading ? View.INVISIBLE:View.VISIBLE}"
            app:datas="@{vm.companies}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_company"
            app:onItemSelected="@{vm.onItemSelected}"
            />

        <TextView
            android:id="@+id/label_circuit"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginStart="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
            android:text="@string/bottom_sheet_device_circuit_label"
            android:visibility="@{vm.loading ? View.INVISIBLE:View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_spinner"
            tools:text="线路"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/circuit_spinner"
            android:layout_width="0dp"
            android:layout_height="@dimen/fragment_camera_item_height"
            android:layout_marginEnd="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginStart="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
            android:visibility="@{vm.loading ? View.INVISIBLE:View.VISIBLE}"
            app:datas="@{vm.circuits}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_circuit"
            app:onItemSelected="@{vm.onItemSelected}"
            />

        <TextView
            android:id="@+id/label_pole"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginStart="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
            android:text="@string/bottom_sheet_device_pole_label"
            android:visibility="@{vm.loading ? View.INVISIBLE:View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circuit_spinner"
            tools:text="杆塔"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/pole_spinner"
            android:layout_width="0dp"
            android:layout_height="@dimen/fragment_camera_item_height"
            android:layout_marginEnd="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginStart="@dimen/material_component_bottom_sheet_edge_left_right_margins"
            android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
            android:visibility="@{vm.loading ? View.INVISIBLE:View.VISIBLE}"
            app:datas="@{vm.poles}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_pole"
            app:onItemSelected="@{vm.onItemSelected}"
            />

        <TextView
            android:id="@+id/search_btn"
            style="@style/TextAppearance.AppCompat.Title.Inverse"
            android:layout_width="0dp"
            android:layout_height="@dimen/fragment_camera_item_height"
            android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
            android:background="@color/material_blue_500"
            android:gravity="center"
            android:onClick="@{()->vm.search()}"
            android:text="@string/bottom_sheet_device_search"
            android:visibility="@{vm.loading ? View.INVISIBLE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pole_spinner"
            tools:text="搜索"/>

    </android.support.constraint.ConstraintLayout>
</layout>